--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: Lato, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -10,4 +12,19 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.stopwatch {
+  font-size: 70px;
+  margin-top: 30vh;
+  text-align: center;
+}
+
+.stopwatch p {
+  margin: 0;
+}
+
+.stopwatch button {
+  margin: 4px;
+  font-size: 20px;
 }
